--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reelgood-cli",
+  "name": "@ganeshnrao/reelgood-cli",
   "version": "1.0.0",
   "description": "Watch your favorite shows and movies from the command-line!",
   "main": "src/index.js",
@@ -34,5 +34,13 @@
     "enquirer": "^2.3.6",
     "lodash": "^4.17.21",
     "open": "^8.4.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ganeshnrao/reelgood-cli.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ganeshnrao/reelgood-cli/issues"
+  },
+  "homepage": "https://github.com/ganeshnrao/reelgood-cli#readme"
 }
